# afl

./: CLAUDE.md  Cargo.toml  README.md  optimise_cache
examples/: optimise.rs  presentation_demo.rs
src/: lib.rs  main.rs  presentation.rs  tipping.rs
src/optimise/: mod.rs
src/presentation/: formatters.rs  reports.rs
src/tipping/: models.rs  squiggle.rs
src/tipping/models/: glicko.rs  margin.rs
