[package]
name = "afl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = "0.10.0"
chrono = "0.4.37"
request_cache = { git = "https://github.com/DavidJArnold/request_cache/", version = "0.1.0" }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.115"
